# Platformer

./: README.md
Platformer/: CMakeLists.txt  Components.h  EntityManager.h  GameEngine.cpp  GameEngine.h  Scene.h  SceneOptions.cpp  ScenePlaying.cpp  ScenePlaying.h  SceneStartMenu.cpp  SceneStartMenu.h
PlatformerRemastered/: Animation.h  Assets.h  CMakeLists.txt  Entity.h  GameEngine.cpp  GameEngine.h
PlatformerRemastered/scenes/: Scene.h  SceneGameOver.cpp  SceneGameOver.h  SceneOptions.cpp  SceneOptions.h  ScenePlaying.cpp  ScenePlaying.h  SceneStartMenu.h
